<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/pizza_login"
        android:contentDescription="Pizza Image" />

    <TextView
        android:id="@+id/storeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/storeText"
        android:textSize="20sp"
        android:textColor="#733F0E"
        android:layout_gravity="start"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"/>

    <Spinner
        android:id="@+id/storeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="30dp"/>

    <TextView
        android:id="@+id/yourName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yourName"
        android:textSize="20sp"
        android:textColor="#733F0E"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/nameEditText"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:backgroundTint="#D52F2F"
        android:textColor="#FFFFFF"
        app:cornerRadius="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" />



</LinearLayout>