<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".SecondActivity">

    <!-- Gunakan ConstraintLayout untuk mengatur gambar dan konten -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/logoPerson"
            android:layout_width="48dp"
            android:layout_height="43dp"
            android:src="@drawable/person"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/textBesideLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:text="Hello, Asep"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/logoPerson"
            app:layout_constraintTop_toTopOf="@+id/logoPerson" />

        <ImageView
            android:id="@+id/storeImage"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginTop="84dp"
            android:src="@drawable/cihampelas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/storePagetwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="40dp"
            android:text="@string/storePagetwo"
            android:textColor="#733F0E"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/storeImage" />

        <TextView
            android:id="@+id/sampingStore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="176dp"
            android:layout_marginTop="40dp"
            android:text="@string/sampingStore"
            android:textColor="#733F0E"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/storePagetwo"
            app:layout_constraintTop_toBottomOf="@id/storeImage" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="96dp"
            android:text="@string/location"
            android:textColor="#733F0E"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/storeImage" />

        <TextView
            android:id="@+id/maps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="172dp"
            android:layout_marginTop="96dp"
            android:text="@string/maps"
            android:textColor="#733F0E"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/location"
            app:layout_constraintTop_toBottomOf="@id/storeImage" />

        <ImageView
            android:id="@+id/logoMaps"
            android:layout_width="27dp"
            android:layout_height="28dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/maps_pin"
            app:layout_constraintStart_toEndOf="@id/maps"
            app:layout_constraintTop_toTopOf="@+id/maps" />

        <Button
            android:id="@+id/menuButton"
            android:layout_width="329dp"
            android:layout_height="52dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="#D52F2F"
            android:text="See Menus"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:cornerRadius="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.585"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/maps" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
